<resources>
    <string name="app_name" translatable="false">ClickOn</string>
    <string name="clickondevice" translatable="false">ClickOn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="shop_price">%1$s min \u2022 R$ %2$.2f</string>
    <string name="inicio">Início</string>
    <string name="celular">Celular</string>
    <string name="computador">Computador</string>
    <string name="tablet">Tablet</string>
    <string name="express">Express</string>
    <string name="banner">banner</string>
    <string name="dotted">&#8226;</string>
    <string name="assistances">Assistência</string>
    <string name="device">Device</string>
    <string name="endereco_atual">Endereço atual</string>
    <string name="font_arima_madurai_medium">fonts/ArimaMadurai-Medium.ttf</string>
    <string name="device_products_logo">Device</string>
    <string name="text_diagnostic_phone">Ihhhh... Deu ruim por aí né? Deixa que a gente resolve pra você, diz aí o que aconteceu com seu celular?</string>
    <string name="text_diagnostic_computer">Ihhhh... Deu ruim por aí né? Deixa que a gente resolve pra você, diz aí o que aconteceu com seu computador?</string>
    <string name="text_diagnostic_tablet">Ihhhh... Deu ruim por aí né? Deixa que a gente resolve pra você, diz aí o que aconteceu com seu tablet?</string>
    <string name="destaques">Destaques</string>
    <string name="ver_mais">Ver mais</string>
    <string name="encontre_servico">Encontre o seu serviço aqui</string>
    <string name="profile">Profile</string>
    <string name="entrar">Entrar</string>
    <string name="imagem">imagem</string>
    <string name="about_us">Sobre nós</string>
    <string name="image_about_us">image about us</string>
    <string name="image_register">image register</string>
    <string name="register_assistances">Cadastre-se como uma assistência</string>
    <string name="register_motorist">Cadastre-se como motorista</string>
    <string name="image_motorist">image motorist</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="terms_image">terms image</string>
    <string name="terms_of_use">Termos de uso</string>
    <string name="arrow_terms">arrow_terms</string>
    <string name="privacy">Política de Privacidade</string>
    <string name="image_politic">image_politic</string>
    <string name="privacy_politic">Política de Privacidade</string>
    <string name="image_arrow">image_arrow</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="login">Entrar</string>
    <string name="see_more">Ver mais</string>
    <string name="assistances_success">Assistências de sucesso</string>
    <string name="sucessos_na_click">Sucessos na Click</string>
    <string name="shop_category">\u2022 %1$s  \u2022 %2$.1f km</string>
    <string name="model_phone">Qual o modelo do seu celular?</string>
    <string name="encontrar">Encontrar modelo</string>
    <string name="phone_model">Modelo do telefone: %s</string>
    <string name="createCount">Criar conta</string>
    <string name="recuperateCount">Recuperar conta</string>

</resources>